@@ -1,3 +1,11 @@
+2004-04-26  Darin Adler  <darin@apple.com>
+
+        - fixed <rdar://problem/3634145>: "REGRESSION: nil-deref in QTextCodec::toUnicode every time loading page at wiki.wordpress.org"
+
+        * kwq/KWQKURL.mm:
+        (KURL::KURL): Simplify check for nil that defaults to UTF-8.
+        (KURL::decode_string): Add a similar test here.
+
 2004-04-26  David Hyatt  <hyatt@apple.com>
 
 	Implement the quirk that makes the <body> and <html> size to fill the viewport in quirks mode.  This
